SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval__c/CPQ_Playbook_Approval__c.object-meta.xml
<CustomObject>
    <description>Approvals governing allowed behavior of CPQ Playbook modifications</description>
    <label>CPQ Playbook Approval</label>
    <nameField>
        <label>CPQ Playbook Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>