SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if approval is active and should be enforced in playbook</description>
    <inlineHelpText>Determines if approval is active and should be enforced in playbook</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>