SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label users see in CPQ for this approval</description>
    <inlineHelpText>Displayed label Users see in CPQ</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>