SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval__c/fields/Persistent_Approval__c.field-meta.xml
<CustomField>
    <fullName>Persistent_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if approval needs to be reapproved after it has been approved once, but the quote is edited.</description>
    <inlineHelpText>Determines if approval needs to be reapproved after it has been approved once, but the quote is edited. If TRUE, an approved approval does not need to be reapproved upon the quote being edited.</inlineHelpText>
    <label>Persistent Approval</label>
    <type>Checkbox</type>
</CustomField>