SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approval__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason users are shown for why this approval is being required</description>
    <inlineHelpText>Reason Users wee for why this approval is being required</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>